--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-! 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>my self</title>
+</head>
+<body>
+    <h1>my self</h1>
+    <p>hi,
+        i'm Taofikat Oyedepo,i'm a computer science student at tai solarin university of education ,
+        i'm a frontend web developer.
+        i hale from ibadan in oyo state ,i'm forward thinking bright who believe in rule of order and cordiality.
+        my favourite is plantain,i'm 157cm tall,im joviaj and easy to interact whit 
+    </p>
+</body>
+</html>  
